# HW9

deepfake_detector/: .env.example  .gitignore  README.md  demo.py  pyproject.toml
deepfake_detector/config/: config.yaml
deepfake_detector/data/samples/: README.md
deepfake_detector/docs/: PRD.md  architecture.md
deepfake_detector/notebooks/: analysis.ipynb
deepfake_detector/src/deepfake_detector/: __init__.py  cli.py
deepfake_detector/src/deepfake_detector/agent/: __init__.py  detector_agent.py  prompts.py
deepfake_detector/src/deepfake_detector/core/: __init__.py  detector.py  models.py
deepfake_detector/src/deepfake_detector/tools/: __init__.py  base.py  face_analyzer.py  frequency_analyzer.py  optical_flow_analyzer.py  temporal_analyzer.py  video_extractor.py
deepfake_detector/src/deepfake_detector/utils/: __init__.py  helpers.py
deepfake_detector/tests/: __init__.py  conftest.py  test_agent.py  test_models.py  test_tools.py
